# ckanext-link

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
ckanext/link/: config.py  model.py  plugin.py  safefetch.py  tasks.py  views.py
ckanext/link/i18n/: ckanext-link.pot
ckanext/link/i18n/fr/LC_MESSAGES/: ckanext-link.mo  ckanext-link.po
ckanext/link/migration/link/versions/: 001_a1b2c3d4e5f6_create_tables.py  002_b2c3d4e5f6a7_add_heartbeat.py
ckanext/link/templates/admin/: base.html  link_checker.html
