[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-link"
version = "0.1.0"
description = "CKAN extension for checking broken resource links"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.entry-points."ckan.plugins"]
link = "ckanext.link.plugin:LinkPlugin"

[tool.setuptools.packages.find]
include = ["ckanext*"]
